Cleaned up the handling of the Hurricane initialization. Still more to do.

--- a/HurrDemo.html
+++ b/HurrDemo.html
@@ -22,32 +22,51 @@
     <script src="gfx/GreatCircle.js"></script>
 
     <script src="js/StormData.js"></script>
+    <script src="js/StormFile.js"></script>
     <script src="js/HurrPlot.js"></script>
+    <!-- script src="js/HurrGui.js"></script -->
 
 </head>
 <body>
 
 <script>
-
-    var hurrPlot = new HurrPlot();
+    this.hurrPlot;
+    this.stormFile;
+   // this.hurrGui;
 
     // then initialize our demo's stuff
     initializeDemo();
-
-    // temporary...
-    //animateScene();
 
     /**
      * Initialize the Demo.
      */
     function initializeDemo() {
 
-        // Create the mesh onto which we will render the output of the hurricane model
-        hurrPlot.createGlobe();
+        this.hurrPlot = new HurrPlot();
 
-        //hurrPlot.animateScene();
+        // Create the mesh onto which we will render the output of the hurricane model
+        this.hurrPlot.createGlobe();
+
+      //  loadStorms();
     }
 
+    /**
+     * Load all the storms in the specified file, parsing them into JSON
+     */
+  //  function loadStorms() {
+//
+   //     stormFile = new StormFile();
+   //     stormFile.loadData( "data/hurdat2-1851-2016-041117.json", stormsLoaded );
+   // }
+
+    /**
+     * Call back from loadStorms:HTTPRequest when data has been loaded
+     */
+   // function stormsLoaded() {
+    //    hurrGui = new HurrGui();
+//
+    //    hurrGui.setupDatGui();
+  //  }
 </script>
 
 </body>
