--- a/HurrDemo.html
+++ b/HurrDemo.html
@@ -24,7 +24,7 @@
     <script src="js/StormData.js"></script>
     <script src="js/StormFile.js"></script>
     <script src="js/HurrPlot.js"></script>
-    <!-- script src="js/HurrGui.js"></script -->
+    <script src="js/HurrGui.js"></script>
 
 </head>
 <body>
@@ -47,26 +47,26 @@
         // Create the mesh onto which we will render the output of the hurricane model
         this.hurrPlot.createGlobe();
 
-      //  loadStorms();
+        loadStorms();
     }
 
     /**
      * Load all the storms in the specified file, parsing them into JSON
      */
-  //  function loadStorms() {
-//
-   //     stormFile = new StormFile();
-   //     stormFile.loadData( "data/hurdat2-1851-2016-041117.json", stormsLoaded );
-   // }
+    function loadStorms() {
+
+        stormFile = new StormFile();
+        stormFile.loadData( "data/hurdat2-1851-2016-041117.json", stormsLoaded );
+    }
 
     /**
      * Call back from loadStorms:HTTPRequest when data has been loaded
      */
-   // function stormsLoaded() {
-    //    hurrGui = new HurrGui();
-//
-    //    hurrGui.setupDatGui();
-  //  }
+    function stormsLoaded() {
+        hurrGui = new HurrGui();
+
+        hurrGui.setupDatGui();
+    }
 </script>
 
 </body>
